--- a/mobile.css
+++ b/mobile.css
@@ -14,6 +14,8 @@
     border-radius: 20%;
     border: 1px solid rgba(255, 255, 255, 0.48);
 
+    z-index: 99999;
+
     position: fixed;
 
     width: 50px;
