--- a/style.css
+++ b/style.css
@@ -497,6 +497,70 @@ body {
         color: rgb(255, 136, 0);
     }
 
+    .pagamentos {
+        margin: auto;
+        width: 75%;
+        max-width: 2500px;
+        margin-bottom: 20px;
+        margin-top: 50px;
+
+        .titu_pagamentos {
+            display: flex;
+            justify-content: center;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgb(238, 225, 225);
+            font-size: large;
+            margin: 50px;
+        }
+
+        .formas {
+            width: 75%;
+            margin: auto;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgb(238, 225, 225);
+            
+            
+
+            ul {
+                display: flex;
+                justify-content: center;
+                gap: 2em;
+        
+                
+                li {
+                    list-style: none;
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
+
+            i {
+                font-size: 25px;
+                padding-right: 10px;
+            }
+
+            strong {
+                padding-left: 5px;
+                color: rgb(204, 200, 200);
+                font-weight: 300;
+            }
+
+            img {
+                width: 25px;
+                height: 25px;
+                padding-right: 10px;
+            }
+        }
+
+        .pagamento_inteligent {
+            display: flex;
+            justify-content: center;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgba(201, 189, 189, 0.699);
+            margin-top: 50px;
+        }
+    }
+
 }
 
 
@@ -1448,6 +1512,71 @@ header {
         color: rgb(255, 136, 0);
     }
 
+    .pagamentos {
+        margin: auto;
+        width: 75%;
+        max-width: 2500px;
+        margin-bottom: 20px;
+        margin-top: 50px;
+
+        .titu_pagamentos {
+            display: flex;
+            justify-content: center;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgb(238, 225, 225);
+            font-size: large;
+            margin: 50px;
+        }
+
+        .formas {
+            width: 75%;
+            margin: auto;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgb(238, 225, 225);
+            
+            
+
+            ul {
+                display: flex;
+                justify-content: center;
+                gap: 2em;
+        
+                
+                li {
+                    list-style: none;
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
+
+            i {
+                font-size: 25px;
+                padding-right: 10px;
+            }
+
+            strong {
+                padding-left: 5px;
+                color: rgb(204, 200, 200);
+                font-weight: 300;
+            }
+
+            img {
+                width: 25px;
+                height: 25px;
+                padding-right: 10px;
+            }
+        }
+
+        .pagamento_inteligent {
+            display: flex;
+            justify-content: center;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgba(201, 189, 189, 0.699);
+            margin-top: 50px;
+        }
+    }
+
+
 }
 
 .projetos {
@@ -2397,6 +2526,72 @@ header {
     .bi-fire {
         color: rgb(255, 136, 0);
     }
+
+    .pagamentos {
+        margin: auto;
+        width: 75%;
+        max-width: 2500px;
+        margin-bottom: 20px;
+        margin-top: 50px;
+
+        .titu_pagamentos {
+            display: flex;
+            justify-content: center;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgb(238, 225, 225);
+            font-size: large;
+            margin: 50px;
+        }
+
+        .formas {
+            width: 75%;
+            margin: auto;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgb(238, 225, 225);
+            
+            
+
+            ul {
+                display: flex;
+                justify-content: center;
+                gap: 1em;
+        
+                
+                li {
+                    list-style: none;
+                    display: flex;
+                    justify-content: space-between;
+                    font-size: 13px;
+                }
+            }
+
+            i {
+                font-size: 15px;
+                padding-right: 10px;
+            }
+
+            strong {
+                padding-left: 5px;
+                color: rgb(204, 200, 200);
+                font-weight: 300;
+            }
+
+            img {
+                width: 25px;
+                height: 25px;
+                padding-right: 10px;
+            }
+        }
+
+        .pagamento_inteligent {
+            display: flex;
+            justify-content: center;
+            font-family: "Hubot Sans", sans-serif;
+            color: rgba(201, 189, 189, 0.699);
+            margin-top: 50px;
+        }
+    }
+
 
 }
 
