--- a/portifolio/styles.css
+++ b/portifolio/styles.css
@@ -25,7 +25,7 @@ body {
 
 .menu {
     width: 75%;
-    background: #1a080818;
+    background: #a7a5a517;
     backdrop-filter: blur(20px);
     margin: auto;
     border-radius: 30px;
@@ -35,7 +35,7 @@ body {
 
     .menu-info {
         margin-top: 15px;
-        border: solid 1px var(--corDois);
+        border: solid 1px #ffffff11;
         border-radius: 30px;
 
         padding: 0 15px;
@@ -80,10 +80,11 @@ body {
 
             .contact {
                 margin-left: 20px;
-                background-color: #4370694f;
+                background-color: #4370692d;
                 backdrop-filter: blur(30px);
-                border-radius: 30px;
-                border: 1px solid rgba(255, 255, 255, 0.459);
+                border-radius: 25px;
+                border: 1px solid rgba(255, 255, 255, 0.164);
+                transition: 0.3s ease-in;
 
                 li {
                     padding: 10px;
@@ -96,11 +97,8 @@ body {
             }
 
             .contact:hover {
+                background-color: var(--corDois);
 
-                a {
-                    color: #ffffff;
-                    font-size: 17px;
-                }
             }
 
 
