--- a/portifolio/styles.css
+++ b/portifolio/styles.css
@@ -1033,7 +1033,7 @@ header {
 
 .menu {
     width: 75%;
-    background: #1a080818;
+    background: #a7a5a517;
     backdrop-filter: blur(20px);
     margin: auto;
     border-radius: 30px;
@@ -1043,7 +1043,7 @@ header {
 
     .menu-info {
         margin-top: 15px;
-        border: solid 1px var(--corDois);
+        border: solid 1px #ffffff11;
         border-radius: 30px;
 
         padding: 0 15px;
@@ -1088,10 +1088,11 @@ header {
 
             .contact {
                 margin-left: 20px;
-                background-color: #4370694f;
+                background-color: #4370692d;
                 backdrop-filter: blur(30px);
-                border-radius: 30px;
-                border: 1px solid rgba(255, 255, 255, 0.459);
+                border-radius: 25px;
+                border: 1px solid rgba(255, 255, 255, 0.164);
+                transition: 0.3s ease-in;
 
                 li {
                     padding: 10px;
@@ -1104,11 +1105,8 @@ header {
             }
 
             .contact:hover {
+                background-color: var(--corDois);
 
-                a {
-                    color: #ffffff;
-                    font-size: 17px;
-                }
             }
 
 
@@ -1116,6 +1114,7 @@ header {
     }
 
 }
+
 
 .container-principio {
     display: flex;
@@ -2048,7 +2047,7 @@ header {
 
 .menu {
     width: 75%;
-    background: #1a080818;
+    background: #a7a5a517;
     backdrop-filter: blur(20px);
     margin: auto;
     border-radius: 30px;
@@ -2058,7 +2057,7 @@ header {
 
     .menu-info {
         margin-top: 15px;
-        border: solid 1px var(--corDois);
+        border: solid 1px #ffffff11;
         border-radius: 30px;
 
         padding: 0 15px;
@@ -2103,10 +2102,11 @@ header {
 
             .contact {
                 margin-left: 20px;
-                background-color: #4370694f;
+                background-color: #4370692d;
                 backdrop-filter: blur(30px);
-                border-radius: 30px;
-                border: 1px solid rgba(255, 255, 255, 0.459);
+                border-radius: 25px;
+                border: 1px solid rgba(255, 255, 255, 0.164);
+                transition: 0.3s ease-in;
 
                 li {
                     padding: 10px;
@@ -2119,11 +2119,8 @@ header {
             }
 
             .contact:hover {
+                background-color: var(--corDois);
 
-                a {
-                    color: #ffffff;
-                    font-size: 17px;
-                }
             }
 
 
@@ -2131,6 +2128,7 @@ header {
     }
 
 }
+
 
 .container-principio {
     display: flex;
